# emailAgent

./: .gitignore  README.md  SETUP.md  cli.py  config.yaml.example  exit.sh  prd.md  pyproject.toml  requirements.txt  setup.sh
bulk_cleaner/: README.md  __init__.py
core/: __init__.py  auth.py  config.py  deleter.py  gmail_client.py  logger.py
docs/: confidence-scoring.md  core.md  job-tracker.md  tests.md
job_tracker/: __init__.py  classifier.py  excel_storage.py  extractor.py  job_patterns.py  ollama_client.py
tests/: __init__.py
tests/fixtures/: applied_emails.json  interviewing_emails.json  rejected_emails.json
tests/test_job_tracker/: __init__.py  test_classifier.py  test_extractor.py
